# final_project

./: .dockerignore  .gitignore  DOCKER_GUIDE.md  Dockerfile  README.md  ai_logs.txt  container_logs.txt  current_ai_logs.txt  current_web_logs.txt  db.sqlite3  debug_output.txt  debug_visibility.py  docker-compose.yml  docker_ports.txt  fix_frontend.py  fix_korean.py  fix_owners.py  inspect_user.py  ollama_models.txt  package-lock.json  package.json  playwright.config.js  port_info.txt  pyproject.toml  web_logs_out.txt
@plan/test/: main_page_test_plan.md
ai_server/: Dockerfile  chain_customer.py  chain_scheduleAI.py  requirements.txt  server.py
config/: settings.py  urls.py
frontend/: check_icons.js  index.html  package-lock.json  package.json  temp_manifest.json  vite.config.js  vite_error.txt
frontend/dev-dist/: sw.js
frontend/legacy/: react_index.html
frontend/public/: manifest.json
frontend/src/: App.jsx  firebase.js  index.css
frontend/src/components/: AIChatModal.jsx  BottomNav.jsx  FinancialChart.jsx  ProtectedRoute.jsx  TransactionModal.jsx
frontend/src/components/pdf/: MomoPdfTemplate.jsx  MomoPdfTemplate.types.ts
frontend/src/hooks/: usePDFDownload.js  usePushNotification.js
frontend/src/pages/: Admin.jsx  Board.jsx  Dashboard.jsx  Detail.jsx  ForgotPassword.jsx  JWTDashboard.jsx  JWTLogin.jsx  Login.jsx  Main.jsx  MyPage.jsx  OCR.jsx  Schedule.jsx  Signup.jsx  Unauthorized.jsx
main/: admin.py  apps.py  models.py  ocr_service.py  r2.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_user_address_user_birth_date_user_gender.py  0003_rename_address_user_adress_and_more.py  0004_meeting_description.py  0005_alter_meeting_meeting_id.py  0006_meetingmember_status.py  0007_alter_meetingmember_role.py  0008_boardpost_image_url_boardpost_post_date.py  0009_scheduleattendance.py  0010_notification.py  0011_userdevice.py  0012_boardimage.py  0013_boardpost_is_pinned.py  0014_boardcomment_parent.py  0015_remove_fincategory_uq_fin_category_and_more.py  0016_fintransaction_receipt_url.py  0017_delete_finattachment.py
main/templates/login/: login.html
main/templates/main/: main.html
main/templates/meeting/: board.html  detail.html  ocr.html  schedule.html
main/templates/mypage/: mypage.html
main/utils/: upload.py
playwright-report/: index.html
test-results/main-Momo-메인-페이지-E2E-테스팅-모임-가입하기-모달-작동-확인-chromium/: error-context.md
tests/: main.spec.js
(+22 files in other folders)
